Ensure shade elements have a higher z-index than ui elements

--- a/editor/sass/mixins.scss
+++ b/editor/sass/mixins.scss
@@ -224,4 +224,5 @@
     bottom: 0;
     right: 0;
     background: $shade-color;
+    z-index: 5;
 }
